<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
    android:background="@mipmap/bg">


    <LinearLayout
        android:id="@+id/login_layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/user_name"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/login_et_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/password"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="numberPassword"
                />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cdcdcd"/>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:orientation="horizontal"-->
        <!--android:padding="5dp">-->

        <TextView
            android:id="@+id/login_tv_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_regist_selector"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/login"
            android:textSize="35sp"/>

        <!--<View-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_margin="5dp"-->
            <!--android:background="#cdcdcd"/>-->

        <!--<TextView-->
            <!--android:id="@+id/login_tv_regist"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:background="@drawable/login_regist_selector"-->
            <!--android:gravity="center"-->
            <!--android:padding="5dp"-->
            <!--android:text="@string/regist"-->
            <!--android:textSize="35sp"/>-->

    <!--</LinearLayout>-->
    <FrameLayout
        android:id="@+id/chat"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>
</LinearLayout>